# contract/types.ts
@@ -3,11 +3,13 @@ import type { components, paths } from "./contract";
 // Entity types
 export type Address = components['schemas']['Address']
 export type AppointmentDetails = components['schemas']['AppointmentDetails']
+export type AppointmentStatus = components['schemas']['AppointmentStatus']
 export type AppointmentCreateRequest = components['schemas']['AppointmentCreateRequest']
 export type AppointmentUpdateRequest = components['schemas']['AppointmentUpdateRequest']
 export type AppointmentBrief = components['schemas']['AppointmentBrief']
 export type AppStatus = components['schemas']['AppStatus']
 export type Billing = components['schemas']['Billing']
+export type BillingStatus = components['schemas']['BillingStatus']
 export type ClinicBrief = components['schemas']['ClinicBrief']
 export type ClinicDetails = components['schemas']['ClinicDetails']
 export type CMSPageContent = components['schemas']['CMSPageContent']
@@ -22,7 +24,9 @@ export type OpeningHours = components['schemas']['OpeningHours']
 export type PatientBrief = components['schemas']['PatientBrief']
 export type PatientProfile = components['schemas']['PatientProfile']
 export type PrescribedTreatment = components['schemas']['PrescribedTreatment']
+export type PrescribedTreatmentStatus = components['schemas']['PrescribedTreatmentStatus']
 export type Referral = components['schemas']['Referral']
+export type ReferralStatus = components['schemas']['ReferralStatus']
 export type ReferralCreateRequest = components['schemas']['ReferralCreateRequest']
 export type ReferralUpdateRequest = components['schemas']['ReferralUpdateRequest']
 export type ServiceType = components['schemas']['ServiceType']
